@@ -11,6 +11,10 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-03-28
+2014-03-28 Mikhail S. Dubrovin
+- add SegmentGeometry.h - abstract class for interface description
+
 Tag: V00-01-21
 2014-03-04 Mikhail S. Dubrovin
 - in CalibPars (in order to compile in RHEL6) add #include <stdint.h> // for uint8_t, uint16_t etc.
